--- a/css/_login.css
+++ b/css/_login.css
@@ -5,10 +5,10 @@
 .head-title{
 	background-color: #20c7a1 !important;
 }
-.btn {
+/* .btn {
 	box-shadow: 0 1px 1px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);
 }
-
+ */
 .button-login{
 	background-color: #20c7a1 !important;
 }
