--- a/partials/home.html
+++ b/partials/home.html
@@ -1,24 +1,5 @@
 <section>
-	<h2>
-		Bienvenue {{user.first_name}} {{user.last_name}}
-	</h2>
-
-	<br>
-	<br>
-
-	<a href="#login">Login</a>
-	<br>
-	<a href="#signin">Signin</a>
-	<br>
-	<a href="#test">test</a>
-	<br>
-	<a href="#shop">shop</a>
-	<br>
-	<a href="#store">store</a>
-	<br>
-	<a href="#helpSocial">helpSocial</a>
-	<br>
-	<a href="#carte">carte</a>
+<ivicard card="card" ></ivicard>
 
 	
 </section>
