--- a/css/style.css
+++ b/css/style.css
@@ -1,22 +1,65 @@
 body{
     background-color: #50E3C2;
-    width:100%;
 
 }
 
-
-
-.barre {
-    background-color: black;
-}
 
 .navigbarre {
-    background-color: #20c7a1;
-    margin-bottom: 0px;
+    background-color: #444444;
+    width: 1280px;
+    height: 70px;
+    font-size: 16px;
+    text-align: center;
+    padding-top: 8px;
+    padding-left: 20px;
 }
+
+.textRechercher{
+    float: left;
+    margin-left: 20px;
+    margin-right: 10px;
+    margin-top: 5px;
+    padding-top: 5px;
+    height: 40px;
+    width: 200px;
+    border-radius: 3px;
+}
+
+.buttonRechercher{
+    float: left;
+    margin-top: 6px;
+    padding-top: 5px;
+    height: 40px;
+    width: 120px;
+    color: white;
+    border-radius: 3px;
+}
+
+
+.barreBienvenue{
+    color: white;
+    border-radius: 3px;
+    margin-top: 10px;
+    padding-top: 5px;
+    margin-left: 350px;
+    margin-right: 20px;
+    font-size: 18px;
+    float: right;
+  
+}
+
+
+.boutonLogout{
+
+    color: #50E3C2;
+
+}
+
+
 .nav-bar{
     margin-bottom: 0px;
 }
+
 
 #login-dp{
     min-width: 250px;
@@ -24,15 +67,21 @@ body{
     overflow:hidden;
     background-color:rgba(255,255,255,.8);
 }
+
+
 #login-dp .help-block{
     font-size:12px    
 }
+
+
 #login-dp .bottom{
     background-color:rgba(255,255,255,.8);
     border-top:1px solid #ddd;
     clear:both;
     padding:14px;
 }
+
+
 #login-dp .social-buttons{
     margin:12px 0    
 }
