--- a/partials/shop.html
+++ b/partials/shop.html
@@ -159,27 +159,26 @@
 
                         <h5 style="color:white"> * 1 credit = 1 carte </h5>
                         <p>
-<<<<<<<
+
                         <button class="achatBouton" ng-click="calculCredits()"> Achetez avec vos crédits</button>
                         </p> 
-                        <h5 style="color:red">{{err.message}}</h5>
+                        <h5 style="color:red">{{err.message}}</h5> 
 
                         <p class="achatCarte"> Vous avez choisit &nbsp {{fondAAjoute.length}} &nbsp carte(s) &nbsp &nbsp &nbsp 
                         &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp  {{prix | number:2}} €
                         </p>
                          <h5 style="color:white"> * -10% pour 2 à 5 cartes, -20% dès 6 cartes</h5>
 
-=======
+
                         <button class="achatBouton" ng-click="calculCredits()"> Achetez avec vos crédits</button>
                         </p> 
-                        <h5 style="color:red">{{err.message}}</h5>
+                        <!-- <h5 style="color:red">{{err.message}}</h5> -->
 
                         <p class="achatCarte"> Vous avez choisit &nbsp {{fondAAjoute.length}} &nbsp carte(s) &nbsp &nbsp &nbsp 
                         &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp  {{prix | number:2}} €
                         </p>
                          <h5 style="color:white"> * -10% pour 2 à 5 cartes, -20% dès 6 cartes</h5>
 
->>>>>>>
                         <button class="achatBouton">Achetez avec Paypal</button>
                         <p class="achatPied">Ou ajoutez &nbsp <span class="resteCarte">{{50-countCardShared}}</span>&nbsp contacts pour bénéficier d'un fond de carte gratuit</p>
                         
