--- a/css/style.css
+++ b/css/style.css
@@ -41,16 +41,16 @@ body{
     border-radius: 3px;
     margin-top: 10px;
     padding-top: 5px;
-    margin-left: 350px;
+    margin-left: 0px;
     margin-right: 20px;
     font-size: 18px;
-    float: right;
   
 }
 
 
 .boutonLogout{
-
+    height: 40px;
+    width: 120px;
     color: #50E3C2;
 
 }
