--- a/css/store.css
+++ b/css/store.css
@@ -1,55 +1,75 @@
-.main-block{
-	height: 360px;
-	width: 600px;
-}
-.main-card{
-	height: 360px;
-	width: 600px;
-}
-.avatar-block{
-	height: 200px;
-	width: 100%;
-}
-.avatar-image{
-	background-repeat: no-repeat;
-	height: 200px;width: 200px;
-	background-size: cover;
-	background-repeat: no-repeat;
-	border-radius: 50%;
-	border: 1px solid white;
-	overflow: hidden;
-}
-.user-avatar-infos{
-	height: 200px;
-	width: 100%;
-}
-.profile-infos{
-	margin-left: 50px;
-}
-.username{
-	height: 200px;
-	display: table-cell;
-	vertical-align: middle;
-	font-size: 20pt;
-}
-.full-infos{
-	height: 104px;
-	font-size: 14pt;
-	margin-left: 15px;
-	margin-top: 5px;
-}
-.social-list{
-	margin-left: 30px;
-	margin-bottom: 0px;
-}
-.card-actions{
-	width: 30px;
-	margin-top: 30px;
-	float: right;
-	margin-right: 10px;
-
-}
-.icon-action{
-	margin-top: 10px;
+.page-contacts{
+  width: 100%;
+  padding-left: 20px;
+  padding-bottom: 20px;
 }
 
+.content-folders{
+  height: 30px;
+  width: 30px;
+}
+.content-sortbyfilters{
+  height: 30px;
+  width: 30px;
+  display: table-cell;
+  vertical-align: middle;
+}
+
+.main-content{
+  width: 100%;
+}
+.sous-main{
+	width: 100%;
+	height: 110px;
+	padding-bottom: 5px;
+	text-overflow: ellipsis;
+    overflow: hidden;
+}
+.card-container{
+  width: 100%;
+	padding-bottom: 5px;
+}
+.infos-text {
+	line-height: 1,5;
+	font-size: 12pt;
+	font-style: bold;
+	color : black;
+}
+.infos-sup{
+	font-size: 11pt;
+	line-height: 1,5;
+	color: grey;
+}
+.contact-infos {
+  text-align: left;
+	
+}
+.background{
+	position: relative;
+    width: 100%;
+    box-shadow: none;
+    z-index: -1;
+    opacity: 1;
+    pointer-events: none;
+}
+
+.background.background-search::before {
+      content: '';
+      position: absolute;
+      top: 0;
+      left: 40px;
+      right: 0;
+      bottom: 0;
+      background: linear-gradient(90deg, rgba(255, 255, 255, 0) 0%, rgba(255, 255, 255, 1) 150px); /* w3c */
+      display: block;
+      pointer-events: none;
+    }
+
+.contacts-container{
+}
+.card-contact-right{
+  background-color: white;
+}
+.contact-profile-bottom{
+  margin-top: 30px;
+}
