--- a/partials/home.html
+++ b/partials/home.html
@@ -10,7 +10,7 @@
 	<br>
 	<a href="#signin">Signin</a>
 	<br>
-	<a href="#test">test</a>
+	<a href="#profil">profil</a>
 	<br>
 	<a href="#shop">shop</a>
 	<br>
