--- a/partials/profil.html
+++ b/partials/profil.html
@@ -15,13 +15,22 @@
 			                    <div class="tab-content">
 				                    <div class="row titre-table-profil">
 					                    <div class="col-xs-4 col-sm-4 col-md-4">
-					                        <label>Carte(s) Recu(s)</label>
+					                    	<div>
+					                    		<img id="logo-button-profil" src="img/svg/icon-card-received.svg"/>
+					                    	</div>
+					                        <label>Recu(s)</label>
 				                        </div>
 				                        <div class="col-xs-4 col-sm-4 col-md-4">
-				                        	<label>Carte(s) Echangée(s)</label>
+				                        	<div>
+				                        		<img id="logo-button-profil" src="img/svg/icon-card-sent.svg" />
+				                        	</div>
+				                        	<label>Echangée(s)</label>
 				                        </div>
 				                        <div class="col-xs-4 col-sm-4 col-md-4">
-				                        	<label>Carte(s) Reciproque(s)</label>
+				                        	<div>
+				                        		<img id="logo-button-profil" src="img/svg/icon-card-recipro.svg"/>
+				                        	</div>
+				                        	<label>Reciproque(s)</label>
 				                        </div>
 				                    </div>
 
@@ -837,7 +846,7 @@
 			        	</div>
 			        </div>	
 		        	<div class="form-group col-xs-6 col-sm-6 col-md-6">
-		        		<button class="btn btn-sg btn-default btn-block" type="submit" ng-click="update()">
+		        		<button class="btn btn-sg btn-default btn-block" type="submit" ng-click="update()"><img id="logo-button-profil" src="img/svg/icon-check.svg"/>
                			 Valider
             			</button>
 		        	</div>
