--- a/css/store.css
+++ b/css/store.css
@@ -1,6 +1,7 @@
 .page-contacts{
   width: 100%;
-  padding-left: 20px;
+  padding-left: 5px;
+  padding-right: 5px;
   padding-bottom: 20px;
 }
 
@@ -44,6 +45,12 @@
   text-align: left;
 	
 }
+.contact-select {
+  position: relative;
+  z-index: 100;
+  height: 30px;
+  width: 30px;
+}
 .background{
 	position: relative;
     width: 100%;
@@ -72,4 +79,8 @@
 }
 .contact-profile-bottom{
   margin-top: 30px;
+}
+.modal-dialog.delete{
+  width: 250px;
+  height: 30px;
 }
