--- a/partials/shop.html
+++ b/partials/shop.html
@@ -151,35 +151,28 @@
                     <center>
                         <p class="achatTitle">Achat de cartes premium</p>
                         <div>
-                        <p class="achatCarte" ng-show="achat"> Vous avez choisit &nbsp{{fondAAjoute.length}}&nbsp carte(s), vous avez &nbsp {{getCredits}} &nbsp crédit(s)
+                        <p class="achatCarte" ng-show="achat"> Vous avez choisit &nbsp{{fondAAjoute.length}}&nbsp carte(s), vous avez &nbsp {{user.credits}} &nbsp crédit(s)
                         </p>
-                        <p class="achatCarte" ng-show="!achat"> Vous restez &nbsp {{resteCredits}} &nbsp crédit(s)
+                        <p class="achatCarte" ng-show="!achat"> Achat effectué, vous restez &nbsp {{user.credits}} &nbsp crédit(s)
                         </p>
                         </div>
 
                         <h5 style="color:white"> * 1 credit = 1 carte </h5>
                         <p>
 
-                        <button class="achatBouton" ng-click="calculCredits()"> Achetez avec vos crédits</button>
+                        <button class="achatBouton" ng-click="buy_cards()"> Achetez avec vos crédits</button>
                         </p> 
                         <h5 style="color:red">{{err.message}}</h5> 
 
-                        <p class="achatCarte"> Vous avez choisit &nbsp {{fondAAjoute.length}} &nbsp carte(s) &nbsp &nbsp &nbsp 
+                        <p class="achatCarte" ng-show="achatCredits"> Vous avez choisit &nbsp{{fondAAjoute.length}} carte(s) =  &nbsp{{fondAAjoute.length}} credit(s) &nbsp &nbsp &nbsp 
                         &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp  {{prix | number:2}} €
                         </p>
-                         <h5 style="color:white"> * -10% pour 2 à 5 cartes, -20% dès 6 cartes</h5>
+                        <p class="achatCarte" ng-show="!achatCredits"> Achat effectué</p>
+                         <h5 style="color:white"> * 1.99€/carte, -10% pour 2 à 5 cartes, -20% dès 6 cartes</h5>
 
-
-                        <button class="achatBouton" ng-click="calculCredits()"> Achetez avec vos crédits</button>
-                        </p> 
                         <!-- <h5 style="color:red">{{err.message}}</h5> -->
 
-                        <p class="achatCarte"> Vous avez choisit &nbsp {{fondAAjoute.length}} &nbsp carte(s) &nbsp &nbsp &nbsp 
-                        &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp  {{prix | number:2}} €
-                        </p>
-                         <h5 style="color:white"> * -10% pour 2 à 5 cartes, -20% dès 6 cartes</h5>
-
-                        <button class="achatBouton">Achetez avec Paypal</button>
+                        <button class="achatBouton" ng-click="orderAchatCredit()">Achetez vos crédits</button>
                         <p class="achatPied">Ou ajoutez &nbsp <span class="resteCarte">{{50-countCardShared}}</span>&nbsp contacts pour bénéficier d'un fond de carte gratuit</p>
                         
                      </center>
