--- a/templates/card.html
+++ b/templates/card.html
@@ -6,8 +6,9 @@
 					<div class="user-avatar-infos">
 						<div class="col-xs-4">
 							<div class="avatar-block">
-								<div style="background-image:url({{card._sender.avatar}});height: 200px;width: 200px;background-size: cover;;background-repeat: no-repeat;border-radius: 50%;border: 1px solid white; overflow: hidden;margin-top:15px;" class="avatar-image">
-								</div>
+								<img src="{{card._sender.avatar}}" class="avatar-image">
+								<!--<div style="background-image:url({{card._sender.avatar}});height: 200px;width: 200px;background-size: cover;;background-repeat: no-repeat;border-radius: 50%;border: 1px solid white; overflow: hidden;margin-top:15px;" class="avatar-image">
+								</div>-->
 							</div>
 						</div>
 
@@ -31,7 +32,7 @@
 									<div>{{card._sender.phone1}}</div>
 									<div>{{card._sender.phone2}}</div>
 							</div>
-							<div class="social-list ">
+							<div class="social-list">
 								<i class="fa fa-facebook fa-2x"></i>
 								<i class="fa fa-twitter fa-2x"></i>
 							</div>
