--- a/partials/store.html
+++ b/partials/store.html
@@ -44,7 +44,7 @@
 						                
 						                  <div class="col-xs-3">
 						                    <div class="avatar-content">
-						                      <div style="background-image:url({{card._sender.avatar}});height: 100px;width: 100px;background-size: cover;;background-repeat: no-repeat;border-radius: 50%;border: 1px solid white; overflow: hidden;margin-top:5px;" class="avatar-img">
+						                      <div style="background-image:url({{card._sender.avatar}});height: 100px;width: 100px;background-size: cover;background-repeat: no-repeat;border-radius: 50%;border: 1px solid white; overflow: hidden;margin-top:5px;" class="avatar-img">
 						                      </div>
 						                    </div>
 						                  </div>
