--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,5 @@
 body{
-    background-color: white;
+    background-image: url('../img/header.jpg');
     padding-top: 0px;
     margin-top: 0px;
 }
@@ -7,13 +7,18 @@ body{
 
 .navigbarre {
     background-color: #444444;
-    width: 1280px;
+    width: 100%;
     height: 70px;
     font-size: 16px;
     text-align: center;
     padding-top: 8px;
     padding-left: 20px;
     margin-bottom: -20px;
+}
+
+.barre-links:hover{
+    color: #fff;
+    background-color: #fff;
 }
 
 .textRechercher{
@@ -43,26 +48,16 @@ body{
     border-radius: 3px;
     margin-top: 10px;
     padding-top: 5px;
-<<<<<<< Updated upstream
-    margin-left: 0px;
-    margin-right: 20px;
-=======
-    margin-left: 15%;
->>>>>>> Stashed changes
     font-size: 18px;
+    float: right;
   
 }
 
 
 .boutonLogout{
-<<<<<<< Updated upstream
     height: 40px;
     width: 120px;
     color: #50E3C2;
-=======
-    color: white ;
->>>>>>> Stashed changes
-
 }
 
 
@@ -76,11 +71,6 @@ body{
     padding: 14px 14px 0;
     overflow:hidden;
     background-color:rgba(255,255,255,.8);
-}
-
-
-#login-dp .help-block{
-    font-size:12px    
 }
 
 
