--- a/css/shop.css
+++ b/css/shop.css
@@ -1,5 +1,4 @@
 .fondSite{
-background-color: #50E3C2;
 }
 
 .hide-bullets {
@@ -18,7 +17,7 @@ background-color: #50E3C2;
   	margin-right: auto;
   	margin-top: 30px;
   	width: 1000px; 
-  	height: 450px;
+  	height: 90%;
   	padding-top: 10px;
   	overflow-x:hidden;
   	border-radius: 10px;
